--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,16 @@ html {
 section {
   scroll-snap-align: start;
 }
+
+body {
+  font-family: "inter", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Antonio", sans-serif;
+}
