--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,8 +7,20 @@ html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb{
+  display: none;
+}
+::-webkit-scrollbar-track{
+  display: none;
+}
+
 section {
   scroll-snap-align: start;
+  overflow: hidden;
 }
 
 body {
